--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,33 @@
-/* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+div#wall #tag-2 {
+    background: none;
+    z-index: 6;
+    display: block;
+  }
+body div#wall #tag-3.slick {
+    background: none;
+    z-index: 5;
+    display: block;
+  }
+div#wall #tag-4 {
+    background: none;
+    z-index: 4;
+    display: block;
+  }
+body div#wall .parent #tag-5.slick {
+    background: none;
+    z-index: 3;
+    display: block;
+  }
+body  div#wall div.parent div:last-child div#tag-6 {
+    background: none;
+    z-index: 2;
+    display: block;
+  }
+ html body div#wall div.parent div > #tag-7.slick {
+    background: none;
+    z-index: 1;
+    display: block;
+  }
